--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -7,20 +7,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">  
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Ubuntu&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Arsenal:wght@700&family=Asap:wght@300;500;700&display=swap" rel="stylesheet">
 
 
-
-<title>Christmas Chamber of Commerce</title>
+<title>Bountiful Foods Juices</title>
 
 <!-- STYLE SHEETS -->
 <link href="css/normalize.css" rel="stylesheet">
@@ -36,8 +26,7 @@
 <body>
 
     <header>
-        <img class="logo" src="images/logo.webp" alt="logo">
-        <div>
+        <img class="logo" src="images/juice_logo.webp" alt="Juice logo">
             <h1>Bountiful Foods</h1>
         </div>
 
@@ -58,10 +47,9 @@
         <div class="wrapper">
             <div class="box1">
                 <picture>
-                    <img id="mainimg" src="images/christmastree.jpg" alt="christmas tree">
-                </picture>
+                    <img id="mainimg" src="images/juice.jpg" alt="Fruit Orchard">
                 <section class="calltoaction">
-                    <a href="join">MAKE YOUR OWN JUICE TODAY</a>
+                    <a href="join">MAKE YOUR OWN JUICE</a>
                 </section>
             </div>
             <div class="box2">
@@ -71,12 +59,12 @@
             </div>
             <div class="box4">
                 <h3>California Beautiful</h3>
-                <img src="images/orchards.png" alt="california orchards">
+                <img src="images/fruit_orchard150.jpg" alt="california orchards">
                 <p>Located in beautiful southern California Bountiful Foods secures the best of the locally available organic fresh produce for the most discerning customers. Those looking to visit Carlsbad can enjoy easy access to many fun family spots just as Legoland, Disney land and the world famous beaches. After a long day in the sun nothing is more refreshing than a fruit drink from Bountiful Foods. Orders yours in the Fresh Juices page. We travel through all of southern California.</p>
             </div>
             <div class="box5">
                 <h3>Only the Best!</h3>
-                <img src="images/fruit.png" alt="fresh fruits">
+                <img src="images/fruit150.jpg" alt="fresh fruits">
                 <p>Bountiful Foods only selects the best produce for our drinks. Certified Organic, GMO free and locally farmed you cannot find a better product for health and hapiness.</p> 
             </div>
             <div class="box3">
@@ -102,7 +90,7 @@
             <a href="www.instagram.com"><img src="images/instagram_icon.png" alt="instagram"></a>
             <a href="www.twitter.com"><img src="images/twitter_icon.png" alt="twitter"></a>
         </div>
-        <img class="logo" src="images/logo.webp" alt="logo">
+        <img class="logo" src="images/juice_logo.webp" alt="Juice logo">
         <p>Bountiful Foods</p>
         <p>264 Carlsbad Village Dr</p>
         <p>Carlsbad, CA 92008</p>
