updated Website Size

--- a/Final Project/fresh.html
+++ b/Final Project/fresh.html
@@ -45,7 +45,7 @@
     
     <main>
         <h1>Select your drink mix!</h1>
-            <form class="joinform" method="get" action="thankyou.html">
+            <form class="joinform" method="get">
 
             <fieldset>
                 <legend>Order Form</legend>
