--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -60,7 +60,7 @@
             <div class="box4">
                 <h3>California Beautiful</h3>
                 <img src="images/fruit_orchard150.jpg" alt="california orchards">
-                <p>Located in beautiful southern California Bountiful Foods secures the best of the locally available organic fresh produce for the most discerning customers. Those looking to visit Carlsbad can enjoy easy access to many fun family spots just as Legoland, Disney land and the world famous beaches. After a long day in the sun nothing is more refreshing than a fruit drink from Bountiful Foods. Orders yours in the Fresh Juices page. We travel through all of southern California.</p>
+                <p>Located in beautiful southern California Bountiful Foods secures the best of the locally available organic fresh produce for the most discerning customers. Those looking to visit Carlsbad can enjoy easy access to many fun family spots just as Legoland, Disney land and the world famous beaches. After a long day in the sun nothing is more refreshing than a fruit drink from Bountiful Foods. Order yours in the Fresh Juices page. We travel through all of southern California.</p>
             </div>
             <div class="box5">
                 <h3>Only the Best!</h3>
