--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -78,7 +78,7 @@
             </div>
             <div class="ordercard">
                 <h3>Current Order Status</h3>
-                <p>You have currently ordered <span id="ordernum"></span> specialty drinks!</p>
+                <div id="orderNum"></div>
             </div>
         </div>
 
