--- a/Final Project/fresh.html
+++ b/Final Project/fresh.html
@@ -50,12 +50,12 @@
             <fieldset>
                 <legend>Order Form</legend>
                 <label class="top">First Name* <input type="text" name="fname" required></label>
-                <label class="top">Last Name* <input type="text" name="lname" required></label>
                 <label class="top">Email* <input type="email" name="email" placeholder="someone@gmail.com" required></label>
-                <label class="top">Phone <input type="tel" name="phone" placeholder="1235551234"></label>
+                <label class="top">Phone <input type="tel" name="phone" placeholder="1235551234" required></label>
                 <label class="top">Fruit 1</label> <Select id="fruit1_dropdown" name="fruit1"></Select>
                 <label class="top">Fruit 2</label> <Select id="fruit2_dropdown" name="fruit2"></Select>
                 <label class="top">Fruit 3</label> <Select id="fruit3_dropdown" name="fruit3"></Select>
+                <label class="top">Special Instructions<input type="text" name="fname" class="comments" required></label>
             </fieldset>
 
             <span id="submitdate"></span>    
@@ -71,7 +71,6 @@
             <a href="www.instagram.com"><img src="images/instagram_icon.png" alt="instagram"></a>
             <a href="www.twitter.com"><img src="images/twitter_icon.png" alt="twitter"></a>
         </div>
-        <img class="logo" src="images/juice_logo.webp" alt="Juice logo">
         <p>Bountiful Foods</p>
         <p>264 Carlsbad Village Dr</p>
         <p>Carlsbad, CA 92008</p>
