--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -47,7 +47,7 @@
         <div class="wrapper">
             <div class="box1">
                 <picture>
-                    <img id="mainimg" src="images/juice.jpg" alt="Fruit Orchard">
+                    <img id="mainimg" src="images/juice.jpg" alt="Fruit Orchard" loading="lazy">
                 <section class="calltoaction">
                     <a href="join">MAKE YOUR OWN JUICE</a>
                 </section>
@@ -59,12 +59,15 @@
             </div>
             <div class="box4">
                 <h3>California Beautiful</h3>
-                <img src="images/fruit_orchard150.jpg" alt="california orchards">
+                <img src="images/fruit_orchard150.jpg" alt="california orchards" loading="lazy"
+                            data-srcset="images/fruit_orchard150.jpg 200W,
+                                         images/fruit_orchard400.jpg 400W
+                                         images/fruit_orchard.jpg 800W">
                 <p>Located in beautiful southern California Bountiful Foods secures the best of the locally available organic fresh produce for the most discerning customers. Those looking to visit Carlsbad can enjoy easy access to many fun family spots just as Legoland, Disney land and the world famous beaches. After a long day in the sun nothing is more refreshing than a fruit drink from Bountiful Foods. Order yours in the Fresh Juices page. We travel through all of southern California.</p>
             </div>
             <div class="box5">
                 <h3>Only the Best!</h3>
-                <img src="images/fruit150.jpg" alt="fresh fruits">
+                <img src="images/fruit150.jpg" alt="fresh fruits" loading="lazy">
                 <p>Bountiful Foods only selects the best produce for our drinks. Certified Organic, GMO free and locally farmed you cannot find a better product for health and hapiness.</p> 
             </div>
             <div class="box3">
@@ -90,7 +93,6 @@
             <a href="www.instagram.com"><img src="images/instagram_icon.png" alt="instagram"></a>
             <a href="www.twitter.com"><img src="images/twitter_icon.png" alt="twitter"></a>
         </div>
-        <img class="logo" src="images/juice_logo.webp" alt="Juice logo">
         <p>Bountiful Foods</p>
         <p>264 Carlsbad Village Dr</p>
         <p>Carlsbad, CA 92008</p>
