Fixed Validation errors

--- a/Final Project/fresh.html
+++ b/Final Project/fresh.html
@@ -28,7 +28,6 @@
     <header>
         <img class="logo" src="images/juice_logo.webp" alt="Juice logo">
             <h1>Bountiful Foods</h1>
-        </div>
 
         <div class="date"></div>
             
@@ -55,7 +54,7 @@
                 <label class="top">Fruit 1</label> <Select id="fruit1_dropdown" name="fruit1"></Select>
                 <label class="top">Fruit 2</label> <Select id="fruit2_dropdown" name="fruit2"></Select>
                 <label class="top">Fruit 3</label> <Select id="fruit3_dropdown" name="fruit3"></Select>
-                <label class="top">Special Instructions<textarea rows="10" cols="20" type="text" name="special" class="comments" required></textarea></label>
+                <label class="top">Special Instructions<textarea rows="10" cols="20" name="special" class="comments" required></textarea></label>
             </fieldset>
 
             <div id="output">
