--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -28,7 +28,6 @@
     <header>
         <img class="logo" src="images/juice_logo.webp" alt="Juice logo">
             <h1>Bountiful Foods</h1>
-        </div>
 
         <div class="date"></div>
             
@@ -48,8 +47,9 @@
             <div class="box1">
                 <picture>
                     <img id="mainimg" src="images/juice.jpg" alt="Fruit Orchard" loading="lazy">
+                </picture>    
                 <section class="calltoaction">
-                    <a href="join">MAKE YOUR OWN JUICE</a>
+                    <a href="fresh.html">MAKE YOUR OWN JUICE</a>
                 </section>
             </div>
             <div class="box2">
